Updates to ics-fpa-fod-fires.ipynb

--- a/Aim2/code/Python/aspen-fires-wrangle.ipynb
+++ b/Aim2/code/Python/aspen-fires-wrangle.ipynb
@@ -14,10 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4d797da2-4f14-4307-bafa-ef51add6105c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Complete\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "\n",
@@ -65,6 +73,227 @@
     "#### Calculate LANDFIRE EVT cover type (%) for each fire\n",
     "\n",
     "To start with, we will calculate the % cover for different land cover types within fire perimeters using FIRED and LANDFIRE EVT (ca. 2016 remap)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9f1224e8-bca4-42cd-9f03-a2285eb1f19e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Event_ID</th>\n",
+       "      <th>irwinID</th>\n",
+       "      <th>Incid_Name</th>\n",
+       "      <th>Incid_Type</th>\n",
+       "      <th>Map_ID</th>\n",
+       "      <th>Map_Prog</th>\n",
+       "      <th>Asmnt_Type</th>\n",
+       "      <th>BurnBndAc</th>\n",
+       "      <th>BurnBndLat</th>\n",
+       "      <th>BurnBndLon</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Perim_ID</th>\n",
+       "      <th>dNBR_offst</th>\n",
+       "      <th>dNBR_stdDv</th>\n",
+       "      <th>NoData_T</th>\n",
+       "      <th>IncGreen_T</th>\n",
+       "      <th>Low_T</th>\n",
+       "      <th>Mod_T</th>\n",
+       "      <th>High_T</th>\n",
+       "      <th>Comment</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AK6448214467319840607</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>GLACIER CREEK</td>\n",
+       "      <td>Wildfire</td>\n",
+       "      <td>4534</td>\n",
+       "      <td>MTBS</td>\n",
+       "      <td>Initial (SS)</td>\n",
+       "      <td>1897</td>\n",
+       "      <td>64.482</td>\n",
+       "      <td>-144.673</td>\n",
+       "      <td>...</td>\n",
+       "      <td>506601519860705</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>9999</td>\n",
+       "      <td>9999</td>\n",
+       "      <td>550</td>\n",
+       "      <td>165</td>\n",
+       "      <td>-20</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POLYGON ((-144.67866 64.49452, -144.67802 64.4...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SD4308410285019840906</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SANDOZ</td>\n",
+       "      <td>Wildfire</td>\n",
+       "      <td>4535</td>\n",
+       "      <td>MTBS</td>\n",
+       "      <td>Initial</td>\n",
+       "      <td>2691</td>\n",
+       "      <td>43.084</td>\n",
+       "      <td>-102.850</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>211</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-970</td>\n",
+       "      <td>-150</td>\n",
+       "      <td>220</td>\n",
+       "      <td>700</td>\n",
+       "      <td>9999</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POLYGON ((-102.84037 43.07562, -102.84089 43.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>MT4880411345819840819</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NAPI PEAK</td>\n",
+       "      <td>Wildfire</td>\n",
+       "      <td>4536</td>\n",
+       "      <td>MTBS</td>\n",
+       "      <td>Extended</td>\n",
+       "      <td>3680</td>\n",
+       "      <td>48.804</td>\n",
+       "      <td>-113.458</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-62</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-970</td>\n",
+       "      <td>-150</td>\n",
+       "      <td>160</td>\n",
+       "      <td>308</td>\n",
+       "      <td>515</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POLYGON ((-113.48150 48.80303, -113.48122 48.8...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>MT4533610695819840826</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>KIRBY</td>\n",
+       "      <td>Wildfire</td>\n",
+       "      <td>4537</td>\n",
+       "      <td>MTBS</td>\n",
+       "      <td>Extended</td>\n",
+       "      <td>1597</td>\n",
+       "      <td>45.336</td>\n",
+       "      <td>-106.958</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>52</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-970</td>\n",
+       "      <td>-150</td>\n",
+       "      <td>150</td>\n",
+       "      <td>309</td>\n",
+       "      <td>525</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POLYGON ((-106.93270 45.33398, -106.93237 45.3...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>MT4561710632319840918</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LAKE CREEK</td>\n",
+       "      <td>Wildfire</td>\n",
+       "      <td>4538</td>\n",
+       "      <td>MTBS</td>\n",
+       "      <td>Initial</td>\n",
+       "      <td>3617</td>\n",
+       "      <td>45.617</td>\n",
+       "      <td>-106.323</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-104</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-970</td>\n",
+       "      <td>-150</td>\n",
+       "      <td>-50</td>\n",
+       "      <td>175</td>\n",
+       "      <td>9999</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POLYGON ((-106.32656 45.63166, -106.32635 45.6...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Event_ID irwinID     Incid_Name Incid_Type  Map_ID Map_Prog  \\\n",
+       "0  AK6448214467319840607     NaN  GLACIER CREEK   Wildfire    4534     MTBS   \n",
+       "1  SD4308410285019840906     NaN         SANDOZ   Wildfire    4535     MTBS   \n",
+       "2  MT4880411345819840819     NaN      NAPI PEAK   Wildfire    4536     MTBS   \n",
+       "3  MT4533610695819840826     NaN          KIRBY   Wildfire    4537     MTBS   \n",
+       "4  MT4561710632319840918     NaN     LAKE CREEK   Wildfire    4538     MTBS   \n",
+       "\n",
+       "     Asmnt_Type  BurnBndAc BurnBndLat BurnBndLon  ...         Perim_ID  \\\n",
+       "0  Initial (SS)       1897     64.482   -144.673  ...  506601519860705   \n",
+       "1       Initial       2691     43.084   -102.850  ...              NaN   \n",
+       "2      Extended       3680     48.804   -113.458  ...              NaN   \n",
+       "3      Extended       1597     45.336   -106.958  ...              NaN   \n",
+       "4       Initial       3617     45.617   -106.323  ...              NaN   \n",
+       "\n",
+       "  dNBR_offst dNBR_stdDv NoData_T  IncGreen_T  Low_T  Mod_T  High_T  Comment  \\\n",
+       "0      -9999      -9999     9999        9999    550    165     -20      NaN   \n",
+       "1        211      -9999     -970        -150    220    700    9999      NaN   \n",
+       "2        -62      -9999     -970        -150    160    308     515      NaN   \n",
+       "3         52      -9999     -970        -150    150    309     525      NaN   \n",
+       "4       -104      -9999     -970        -150    -50    175    9999      NaN   \n",
+       "\n",
+       "                                            geometry  \n",
+       "0  POLYGON ((-144.67866 64.49452, -144.67802 64.4...  \n",
+       "1  POLYGON ((-102.84037 43.07562, -102.84089 43.0...  \n",
+       "2  POLYGON ((-113.48150 48.80303, -113.48122 48.8...  \n",
+       "3  POLYGON ((-106.93270 45.33398, -106.93237 45.3...  \n",
+       "4  POLYGON ((-106.32656 45.63166, -106.32635 45.6...  \n",
+       "\n",
+       "[5 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load the MTBS perimeters\n",
+    "mtbs_path = os.path.join(maindir,'data/mtbs/mtbs_perimeter_data/mtbs_perims_DD.shp')\n",
+    "mtbs = gpd.read_file(mtbs_path)\n",
+    "# mtbs[''] = pd.to_datetime(mtbs[''])\n",
+    "mtbs.head()"
    ]
   },
   {
