Updates to 00aspen-fires.ipynb

--- a/Aim2/code/Python/00aspen-fires.ipynb
+++ b/Aim2/code/Python/00aspen-fires.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "4d797da2-4f14-4307-bafa-ef51add6105c",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "0a364ddd-b270-4978-b306-7c4d79cb2b0d",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Functions loaded !\n"
+      "Functions loaded !!!\n"
      ]
     }
    ],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "0d9bcab2-f7ef-4284-ac4f-acef2d28a0f2",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "8e8d3aa6-c59b-4cb0-a4c5-a8146b306f19",
    "metadata": {},
    "outputs": [
@@ -144,14 +144,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start year: 2017, end year: 2023\n",
-      "There are 10364 unique fire events.\n"
+      "Start year: 2018, end year: 2023\n",
+      "There are 8867 unique fire events.\n"
      ]
     }
    ],
    "source": [
     "# Extract fires between 2017-2023\n",
-    "fired = fired[(fired['ig_year'] >= 2017) & (fired['ig_year'] <= 2023)]\n",
+    "fired = fired[(fired['ig_year'] >= 2018) & (fired['ig_year'] <= 2023)]\n",
     "print(f\"Start year: {fired['ig_year'].min()}, end year: {fired['ig_year'].max()}\")\n",
     "print(f\"There are {len(fired['id'].unique())} unique fire events.\")"
    ]
