--- a/Aim2/code/Python/_gridmet-daily.ipynb
+++ b/Aim2/code/Python/_gridmet-daily.ipynb
@@ -32,10 +32,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "2bd57a67-ad12-433f-91d9-7ec7fbf1d2c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Functions loaded !\n"
+     ]
+    }
+   ],
    "source": [
     "# Function to calculate gridmet for daily perimeters\n",
     "def gridmet_summary(fires, reducer, attrs, buffer=None):\n",
@@ -88,7 +130,7 @@
     "def monitor_export(task):\n",
     "    \"\"\" Monitors EE export task \"\"\"\n",
     "    while task.active():\n",
-    "        print('Waiting for export to finish...')\n",
+    "        print('Waiting for export to finish..\\n\\tPatience young padawan.')\n",
     "        time.sleep(30)  # Check every 30 seconds\n",
     "    \n",
     "    # Get the status of the task\n",
@@ -96,9 +138,9 @@
     "    \n",
     "    # Check if the task failed or succeeded\n",
     "    if status['state'] == 'COMPLETED':\n",
-    "        print(\"Export completed successfully!\")\n",
+    "        print(\"Export completed successfully !!!!\")\n",
     "    elif status['state'] == 'FAILED':\n",
-    "        print(f\"Export failed! Reason: {status.get('error_message', 'Unknown error')}\")\n",
+    "        print(f\"Export failed! Bummer. Reason: {status.get('error_message', 'Unknown error')}\")\n",
     "    else:\n",
     "        print(f\"Export ended with state: {status['state']}\")\n",
     "\n",
@@ -513,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c0f4ed8-f4e1-4f2c-a613-df7be7f5f1ae",
+   "id": "9cafdd44-a861-4c28-a1b9-e42303b804f1",
    "metadata": {},
    "outputs": [
     {
@@ -554,39 +596,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Waiting for export to finish...\n",
-      "Waiting for export to finish...\n",
-      "Waiting for export to finish...\n",
-      "Waiting for export to finish...\n",
-      "Waiting for export to finish...\n",
-      "Waiting for export to finish...\n",
-      "Waiting for export to finish...\n",
-      "Waiting for export to finish...\n",
-      "Waiting for export to finish...\n",
-      "Waiting for export to finish...\n",
-      "Waiting for export to finish...\n",
-      "Waiting for export to finish...\n",
-      "Waiting for export to finish...\n",
+      "Export to Google Drive started!\n",
       "Waiting for export to finish...\n",
       "Waiting for export to finish...\n",
       "Waiting for export to finish...\n"
      ]
     }
    ],
-   "source": [
-    "# Monitor the task until it's finished\n",
-    "while export_task.active():\n",
-    "    print('Waiting for export to finish...')\n",
-    "    time.sleep(60)\n",
-    "print('Export finished!')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9cafdd44-a861-4c28-a1b9-e42303b804f1",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Export the FeatureCollection to Google Drive\n",
     "export_task = ee.batch.Export.table.toDrive(\n",
