Updates to 01aspen-fires.ipynb

--- a/Aim2/code/Python/00event-daily_fired_west.ipynb
+++ b/Aim2/code/Python/00event-daily_fired_west.ipynb
@@ -16,7 +16,8 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Gather daily FIRED polygons in the SRM and calculate weather metrics\n",
+    "Gather event- and daily-level FIRED polygons for western U.S. ecoregions\n",
+    "Author: maxwell.cook@colorado.edu\n",
     "\"\"\"\n",
     "\n",
     "import os, time, glob\n",
