Updates to 00event-daily_fired_west.ipynb

--- a/Aim2/code/Python/01event-daily_fired_west-EVT.ipynb
+++ b/Aim2/code/Python/01event-daily_fired_west-EVT.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "id": "0a364ddd-b270-4978-b306-7c4d79cb2b0d",
    "metadata": {},
    "outputs": [
@@ -98,9 +98,9 @@
     "        \"\"\"\n",
     "        Initializes the BandStatistics object\n",
     "        \"\"\"\n",
-    "        self.geometries = gpd.read_file(geo_fp)\n",
+    "        self.geometries = geo_fp\n",
     "        self.id_col = str(uid)\n",
-    "        self.image_da = rxr.open_rasterio(img_fp, cache=False).squeeze()\n",
+    "        self.image_da = img_fp\n",
     "        # Check the CRS information matches\n",
     "        if self.image_da.rio.crs != self.geometries.crs:\n",
     "            self.geometries = self.geometries.to_crs(self.image_da.rio.crs)\n",
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "35b60e93-b5b4-4c2a-9ecb-5480e03889ab",
    "metadata": {},
    "outputs": [
@@ -196,10 +196,10 @@
     {
      "data": {
       "text/plain": [
-       "106"
+       "103"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,15 +207,14 @@
    "source": [
     "# Load the LANDFIRE EVT (ca. 2016)\n",
     "evt_fp = os.path.join(maindir,'data/landcover/LANDFIRE/LF2016_EVT_200_CONUS/Tif/LC16_EVT_200.tif')\n",
-    "evt = rxr.open_rasterio(evt_fp, masked=True, cache=False).squeeze()\n",
-    "shp, gt, wkt, nd = evt.shape, evt.spatial_ref.GeoTransform, evt.rio.crs, evt.rio.nodata\n",
+    "evt_da = rxr.open_rasterio(evt_fp, masked=True, cache=False).squeeze()\n",
+    "shp, gt, wkt, nd = evt_da.shape, evt_da.spatial_ref.GeoTransform, evt_da.rio.crs, evt_da.rio.nodata\n",
     "print(\n",
     "    f\"Shape: {shp}; \\n\"\n",
     "    f\"GeoTransform: {gt}; \\n\"\n",
     "    f\"WKT: {wkt}; \\n\"\n",
     "    f\"NoData Value: {nd}; \\n\"\n",
-    "    f\"Data Type: {evt[0].dtype}\")\n",
-    "del evt\n",
+    "    f\"Data Type: {evt_da[0].dtype}\")\n",
     "gc.collect()"
    ]
   },
@@ -247,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "0d9bcab2-f7ef-4284-ac4f-acef2d28a0f2",
    "metadata": {},
    "outputs": [
@@ -263,17 +262,39 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Load the FIRED perimeters (2018-2024)\n",
-    "daily_fp = os.path.join(maindir,'aspen-fire/Aim2/data/spatial/mod/FIRED/fired-daily_west_2018_to_2024.gpkg')\n",
+    "# Load the FIRED perimeters (2012-2023)\n",
+    "daily_fp = os.path.join(maindir,'aspen-fire/Aim2/data/spatial/raw/FIRED/fired-daily_west_2012_to_2023.gpkg')\n",
     "daily = gpd.read_file(daily_fp)\n",
     "daily = daily.to_crs(proj) # ensure albers projection\n",
     "daily.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "07336bc0-bd00-47c0-9f8f-0345f18bad68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Buffered by 1.0 pixel(s).\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Add a one pixel buffer to the daily perimeters ()\n",
+    "n_pixels = 500  # meters\n",
+    "daily_ = daily.copy() # make a copy of the original data\n",
+    "daily_['geometry'] = daily_['geometry'].buffer(n_pixels)\n",
+    "print(f\"Buffered by {n_pixels/500} pixel(s).\")"
    ]
   },
   {
@@ -291,7 +312,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate the daily land cover (EVT) proportions"
+    "# Calculate the daily land cover (EVT) proportions for each DOB"
    ]
   },
   {
@@ -304,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ad702c12-1d78-40f1-bebc-93f45cf16d46",
    "metadata": {},
    "outputs": [
@@ -312,11 +333,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using 6 workers.\n",
-      "Total elapsed time: 3.88 minutes.\n",
-      "\n",
-      "~~~~~~~~~~\n",
-      "\n"
+      "Using 6 workers.\n"
      ]
     }
    ],
@@ -326,7 +343,7 @@
     "if __name__ == '__main__':\n",
     "    mp.set_start_method('fork')\n",
     "    # Create the band stats class\n",
-    "    band_stats_obj = BandStatistics(daily_fp, evt_fp, uid='did')\n",
+    "    band_stats_obj = BandStatistics(daily_, evt_da, uid='did')\n",
     "    # Run parallel band statistics computation\n",
     "    sampled = band_stats_obj.parallel_compute_stats()\n",
     "\n",
@@ -337,121 +354,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "8ad74002-273a-4471-b784-5b55427ab9d1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>did</th>\n",
-       "      <th>evt</th>\n",
-       "      <th>count</th>\n",
-       "      <th>total_pixels</th>\n",
-       "      <th>pct_cover</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0003d89c00208d55887fec4a95f58ac8</td>\n",
-       "      <td>7080</td>\n",
-       "      <td>1</td>\n",
-       "      <td>600</td>\n",
-       "      <td>0.166667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0003d89c00208d55887fec4a95f58ac8</td>\n",
-       "      <td>7127</td>\n",
-       "      <td>3</td>\n",
-       "      <td>600</td>\n",
-       "      <td>0.500000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0003d89c00208d55887fec4a95f58ac8</td>\n",
-       "      <td>7296</td>\n",
-       "      <td>5</td>\n",
-       "      <td>600</td>\n",
-       "      <td>0.833333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0003d89c00208d55887fec4a95f58ac8</td>\n",
-       "      <td>7297</td>\n",
-       "      <td>1</td>\n",
-       "      <td>600</td>\n",
-       "      <td>0.166667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0003d89c00208d55887fec4a95f58ac8</td>\n",
-       "      <td>7299</td>\n",
-       "      <td>47</td>\n",
-       "      <td>600</td>\n",
-       "      <td>7.833333</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                did   evt  count  total_pixels  pct_cover\n",
-       "0  0003d89c00208d55887fec4a95f58ac8  7080      1           600   0.166667\n",
-       "1  0003d89c00208d55887fec4a95f58ac8  7127      3           600   0.500000\n",
-       "2  0003d89c00208d55887fec4a95f58ac8  7296      5           600   0.833333\n",
-       "3  0003d89c00208d55887fec4a95f58ac8  7297      1           600   0.166667\n",
-       "4  0003d89c00208d55887fec4a95f58ac8  7299     47           600   7.833333"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sampled.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "9a8f9647-77e3-48c8-9dbb-8841d8b53a62",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "gc.collect() # clear any unused memory"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bbd0c584-460f-49ea-9ec4-eefc79517321",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -465,21 +392,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "37ec535d-2b55-4d43-a7e3-4f081830d26a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['VALUE', 'EVT_NAME', 'LFRDB', 'EVT_FUEL', 'EVT_FUEL_N', 'EVT_LF',\n",
-      "       'EVT_PHYS', 'EVT_GP', 'EVT_GP_N', 'SAF_SRM', 'EVT_ORDER', 'EVT_CLASS',\n",
-      "       'EVT_SBCLS', 'R', 'G', 'B', 'RED', 'GREEN', 'BLUE'],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lookup = os.path.join(maindir,'data/landcover/LANDFIRE/LF2016_EVT_200_CONUS/CSV_Data/LF16_EVT_200.csv')\n",
     "lookup = pd.read_csv(lookup)\n",
@@ -488,148 +404,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "aa7b1aad-3eab-4e0f-b53f-d3f6d5dd89fa",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>did</th>\n",
-       "      <th>evt</th>\n",
-       "      <th>count</th>\n",
-       "      <th>total_pixels</th>\n",
-       "      <th>pct_cover</th>\n",
-       "      <th>VALUE</th>\n",
-       "      <th>EVT_NAME</th>\n",
-       "      <th>EVT_PHYS</th>\n",
-       "      <th>EVT_GP_N</th>\n",
-       "      <th>EVT_CLASS</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0003d89c00208d55887fec4a95f58ac8</td>\n",
-       "      <td>7080</td>\n",
-       "      <td>1</td>\n",
-       "      <td>600</td>\n",
-       "      <td>0.166667</td>\n",
-       "      <td>7080</td>\n",
-       "      <td>Inter-Mountain Basins Big Sagebrush Shrubland</td>\n",
-       "      <td>Shrubland</td>\n",
-       "      <td>Big Sagebrush Shrubland and Steppe</td>\n",
-       "      <td>Shrubland</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0003d89c00208d55887fec4a95f58ac8</td>\n",
-       "      <td>7127</td>\n",
-       "      <td>3</td>\n",
-       "      <td>600</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>7127</td>\n",
-       "      <td>Inter-Mountain Basins Semi-Desert Shrub-Steppe</td>\n",
-       "      <td>Shrubland</td>\n",
-       "      <td>Desert Scrub</td>\n",
-       "      <td>Shrubland</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0003d89c00208d55887fec4a95f58ac8</td>\n",
-       "      <td>7296</td>\n",
-       "      <td>5</td>\n",
-       "      <td>600</td>\n",
-       "      <td>0.833333</td>\n",
-       "      <td>7296</td>\n",
-       "      <td>Developed-Low Intensity</td>\n",
-       "      <td>Developed-Low Intensity</td>\n",
-       "      <td>Developed-Low Intensity</td>\n",
-       "      <td>No Dominant Lifeform</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0003d89c00208d55887fec4a95f58ac8</td>\n",
-       "      <td>7297</td>\n",
-       "      <td>1</td>\n",
-       "      <td>600</td>\n",
-       "      <td>0.166667</td>\n",
-       "      <td>7297</td>\n",
-       "      <td>Developed-Medium Intensity</td>\n",
-       "      <td>Developed-Medium Intensity</td>\n",
-       "      <td>Developed-Medium Intensity</td>\n",
-       "      <td>No Dominant Lifeform</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0003d89c00208d55887fec4a95f58ac8</td>\n",
-       "      <td>7299</td>\n",
-       "      <td>47</td>\n",
-       "      <td>600</td>\n",
-       "      <td>7.833333</td>\n",
-       "      <td>7299</td>\n",
-       "      <td>Developed-Roads</td>\n",
-       "      <td>Developed-Roads</td>\n",
-       "      <td>Developed-Roads</td>\n",
-       "      <td>No Dominant Lifeform</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                did   evt  count  total_pixels  pct_cover  \\\n",
-       "0  0003d89c00208d55887fec4a95f58ac8  7080      1           600   0.166667   \n",
-       "1  0003d89c00208d55887fec4a95f58ac8  7127      3           600   0.500000   \n",
-       "2  0003d89c00208d55887fec4a95f58ac8  7296      5           600   0.833333   \n",
-       "3  0003d89c00208d55887fec4a95f58ac8  7297      1           600   0.166667   \n",
-       "4  0003d89c00208d55887fec4a95f58ac8  7299     47           600   7.833333   \n",
-       "\n",
-       "   VALUE                                        EVT_NAME  \\\n",
-       "0   7080   Inter-Mountain Basins Big Sagebrush Shrubland   \n",
-       "1   7127  Inter-Mountain Basins Semi-Desert Shrub-Steppe   \n",
-       "2   7296                         Developed-Low Intensity   \n",
-       "3   7297                      Developed-Medium Intensity   \n",
-       "4   7299                                 Developed-Roads   \n",
-       "\n",
-       "                     EVT_PHYS                            EVT_GP_N  \\\n",
-       "0                   Shrubland  Big Sagebrush Shrubland and Steppe   \n",
-       "1                   Shrubland                        Desert Scrub   \n",
-       "2     Developed-Low Intensity             Developed-Low Intensity   \n",
-       "3  Developed-Medium Intensity          Developed-Medium Intensity   \n",
-       "4             Developed-Roads                     Developed-Roads   \n",
-       "\n",
-       "              EVT_CLASS  \n",
-       "0             Shrubland  \n",
-       "1             Shrubland  \n",
-       "2  No Dominant Lifeform  \n",
-       "3  No Dominant Lifeform  \n",
-       "4  No Dominant Lifeform  "
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Subset the codes we want to join, join back to the dataframe\n",
     "lookup = lookup[['VALUE','EVT_NAME','EVT_PHYS','EVT_GP_N','EVT_CLASS']]\n",
@@ -640,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "d2c49893-38cd-4402-86fb-6c4e9a328c04",
    "metadata": {},
    "outputs": [],
@@ -651,42 +429,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "5fcaa4f9-6b31-4b11-804a-a6a0543a3821",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are [9936] unique fires in the sampled data.\n",
-      "\t[32493] individual daily perimeters.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"There are [{len(props_df['id'].unique())}] unique fires in the sampled data.\\n\\t[{len(props_df['did'].unique())}] individual daily perimeters.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "debf5cae-6ad4-4bf1-bb40-3359c1af54a3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['did', 'evt', 'count', 'total_pixels', 'pct_cover', 'VALUE', 'EVT_NAME',\n",
-       "       'EVT_PHYS', 'EVT_GP_N', 'EVT_CLASS', 'id'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "props_df.columns"
    ]
@@ -1031,7 +787,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compare with a more broad scale approach (event summary within 3km)"
+    "# Compare with a more broad scale approach (event summary within 3km bounds)"
    ]
   },
   {
