--- a/Aim2/code/Python/01event-daily_fired_west-EVT.ipynb
+++ b/Aim2/code/Python/01event-daily_fired_west-EVT.ipynb
@@ -44,6 +44,8 @@
     "maindir = '/Users/max/Library/CloudStorage/OneDrive-Personal/mcook/'\n",
     "projdir = os.path.join(maindir, 'aspen-fire/Aim2/')\n",
     "\n",
+    "homedir = '/iplant/home/maco4303/data' # cyverse\n",
+    "\n",
     "print(\"Ready to go !\")"
    ]
   },
@@ -207,6 +209,8 @@
    "source": [
     "# Load the LANDFIRE EVT (ca. 2016)\n",
     "evt_fp = os.path.join(maindir,'data/landcover/LANDFIRE/LF2016_EVT_200_CONUS/Tif/LC16_EVT_200.tif')\n",
+    "evt_fp = os.path.join(homedir,'JFSP/LC16_EVT_200.tif') # cyverse\n",
+    "\n",
     "evt_da = rxr.open_rasterio(evt_fp, masked=True, cache=False).squeeze()\n",
     "shp, gt, wkt, nd = evt_da.shape, evt_da.spatial_ref.GeoTransform, evt_da.rio.crs, evt_da.rio.nodata\n",
     "print(\n",
@@ -270,6 +274,8 @@
    "source": [
     "# Load the FIRED perimeters (2012-2023)\n",
     "daily_fp = os.path.join(maindir,'aspen-fire/Aim2/data/spatial/raw/FIRED/fired-daily_west_2012_to_2023.gpkg')\n",
+    "daily_fp = os.path.join(homedir,'JFSP/fired-daily_west_2012_to_2023.gpkg') # cyverse\n",
+    "\n",
     "daily = gpd.read_file(daily_fp)\n",
     "daily = daily.to_crs(proj) # ensure albers projection\n",
     "daily.columns"
@@ -398,6 +404,8 @@
    "outputs": [],
    "source": [
     "lookup = os.path.join(maindir,'data/landcover/LANDFIRE/LF2016_EVT_200_CONUS/CSV_Data/LF16_EVT_200.csv')\n",
+    "lookup = os.path.join(homedir,'JFSP/LF16_EVT_200.csv') # cyverse\n",
+    "\n",
     "lookup = pd.read_csv(lookup)\n",
     "print(lookup.columns)"
    ]
@@ -733,6 +741,7 @@
    ],
    "source": [
     "results_dir = os.path.join(projdir,'data/tabular/mod/EVT/')\n",
+    "results_dir = os.path.join(homedir,'JFSP/results/') # cyverse\n",
     "if not os.path.exists(results_dir):\n",
     "    os.makedirs(results_dir)\n",
     "print(f\"Saving EVT summary tables to {results_dir}\")"
@@ -754,11 +763,11 @@
    ],
    "source": [
     "# Save the daily-level EVT summary\n",
-    "out_fp = os.path.join(results_dir, 'fired-daily_west_2018_to_2024-EVT.csv')\n",
+    "out_fp = os.path.join(results_dir, 'fired-daily_west_2012_to_2023-EVT.csv')\n",
     "props_df.to_csv(out_fp)\n",
     "\n",
     "# Save the event-level EVT summary\n",
-    "out_fp = os.path.join(results_dir, 'fired-events_west_2018_to_2024-EVT.csv')\n",
+    "out_fp = os.path.join(results_dir, 'fired-events_west_2012_to_2023-EVT.csv')\n",
     "props_df_event.to_csv(out_fp)\n",
     "\n",
     "print(\"Tables saved !\")"
@@ -812,7 +821,9 @@
     }
    ],
    "source": [
-    "event_fp = os.path.join(projdir,'data/spatial/mod/FIRED/fired-events_west_2018_to_2024.gpkg')\n",
+    "event_fp = os.path.join(projdir,'data/spatial/mod/FIRED/fired-events_west_2012_to_2023.gpkg')\n",
+    "event_fp = os.path.join(homedir,'JFSP/fired-events_west_2012_to_2023.gpkg')\n",
+    "\n",
     "events = gpd.read_file(fp)\n",
     "print(f\"There are [{len(events)}] across western U.S. ecoregions (2018-2024).\")\n",
     "print(events.columns)"
@@ -1113,6 +1124,8 @@
    "source": [
     "# Load the lookup table\n",
     "lookup = os.path.join(maindir,'data/landcover/LANDFIRE/LF2016_EVT_200_CONUS/CSV_Data/LF16_EVT_200.csv')\n",
+    "lookup = os.path.join(homedir,'JFSP/LF16_EVT_200.csv') # cyverse\n",
+    "\n",
     "lookup = pd.read_csv(lookup)\n",
     "# Subset the codes we want to join, join back to the dataframe\n",
     "lookup = lookup[['VALUE','EVT_NAME','EVT_PHYS','EVT_GP_N','EVT_CLASS']]\n",
