--- a/Aim2/code/Python/05afd-modis-viirs_evt-zs.ipynb
+++ b/Aim2/code/Python/05afd-modis-viirs_evt-zs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "ba44202a-9fdb-4249-9cb3-039c1d0744f5",
    "metadata": {},
    "outputs": [
@@ -20,8 +20,9 @@
     "Author: maxwell.cook@colorado.edu\n",
     "\"\"\"\n",
     "\n",
-    "import os\n",
+    "import os, gc\n",
     "import geopandas as gpd\n",
+    "import rioxarray as rxr\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\") # suppresses annoying geopandas warning\n",
@@ -275,12 +276,89 @@
    "id": "4ce28aa9-d350-4d41-92f4-4a57dc8676a5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Load the landfire EVT data"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "a1f17721-749c-485e-9b8b-97f284acd0a1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a3bb5f44-14d3-460f-aa09-1848d5a381bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape: (97283, 154207); \n",
+      "GeoTransform: -2362425.0 30.0 0.0 3177435.0 0.0 -30.0; \n",
+      "WKT: EPSG:5070; \n",
+      "NoData Value: nan; \n",
+      "Data Type: float32\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1330"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evt_fp = os.path.join(maindir,'data/landcover/LANDFIRE/LF2016_EVT_200_CONUS/Tif/LC16_EVT_200.tif')\n",
+    "evt_da = rxr.open_rasterio(evt_fp, masked=True, cache=False, chunks='auto').squeeze()\n",
+    "shp, gt, wkt, nd = evt_da.shape, evt_da.spatial_ref.GeoTransform, evt_da.rio.crs, evt_da.rio.nodata\n",
+    "print(\n",
+    "    f\"Shape: {shp}; \\n\"\n",
+    "    f\"GeoTransform: {gt}; \\n\"\n",
+    "    f\"WKT: {wkt}; \\n\"\n",
+    "    f\"NoData Value: {nd}; \\n\"\n",
+    "    f\"Data Type: {evt_da[0].dtype}\")\n",
+    "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29e40e01-088e-4c61-9041-36bc31d2ab6c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d586578b-0596-4ac7-9f24-e4a6befcaadc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run zonal statistics for the AFD buffers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed744edf-4476-4e38-a046-a93a28d3d34d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e832c900-84dc-42d6-aff2-db8c596eb5ff",
    "metadata": {},
    "outputs": [],
    "source": []
